src/objects/FinancialApplication__c.object
<CustomObject>
    <description>Financial Application used by the Scholarship department for evaluation scholarship application and award or deny based on the information provided by the student.</description>
    <fields>
        <fullName>ActiveDuty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student is active duty</description>
        <inlineHelpText>Whether or not the student is active duty</inlineHelpText>
        <label>Active Duty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AidYear__c</fullName>
        <description>Aid year for applied financial scholarship/fund.</description>
        <label>Aid Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationCSVFileLastUpdated__c</fullName>
        <description>Date the application Status was lasted updated but the .csv file form Academic Works.</description>
        <label>Application CSV File Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicationStatus__c</fullName>
        <description>Status of application as it moves through the workflow.</description>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Document Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending FA Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUPLICATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Appealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Bi-Weekly Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait for Tuition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait for CU&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApplicationType__c</fullName>
        <description>Applications may had the same record type however different Application types that require different treatment.</description>
        <inlineHelpText>Applications may had the same record type however different Application types that require different treatment.</inlineHelpText>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApplicationURL__c</fullName>
        <description>The URL that points to the application the student has submitted</description>
        <inlineHelpText>The URL that points to the application the student has submitted</inlineHelpText>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AttendTerm__c</fullName>
        <description>The calculation of when the student will most likely attend</description>
        <inlineHelpText>The calculation of when the student will most likely attend.  (Term Break Return, New Student Start, or Active Student Current Term)</inlineHelpText>
        <label>Attend Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardStatus__c</fullName>
        <description>After all documentation is gathered and the students application has been reviewed by Committee a decision is then made as the weather or not the an award is not approved or approved.</description>
        <label>Award Status</label>
        <picklist>
            <picklistValues>
                <fullName>Undecided</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AwardedinBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks that the Scholarship has been awarded in Banner</description>
        <inlineHelpText>Marks that the Scholarship has been awarded in Banner</inlineHelpText>
        <label>Awarded in Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerRowid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Banner Rowid of the informatica Load</description>
        <externalId>true</externalId>
        <inlineHelpText>The Banner Rowid of the informatica Load</inlineHelpText>
        <label>BannerRowid</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BenefitType__c</fullName>
        <description>Type of benefit sought.  VA -Chapter</description>
        <label>Benefit Type</label>
        <picklist>
            <picklistValues>
                <fullName>AIR FORCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMY CONT ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 1606</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 1607</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 30/33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 31/33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 33 TOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COAST GUARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GO ARMY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARINES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NATIONAL GUARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAVY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTAH NATIONAL GUARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POST 9/11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Applications (Business Account)</relationshipLabel>
        <relationshipName>Financial_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAREStatus__c</fullName>
        <formula>TEXT(Opportunity__r.CareStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CARE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUsTransferred__c</fullName>
        <description>Number of CUs from a student transfer.</description>
        <label>CU&apos;s Transferred</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChapterAmount__c</fullName>
        <label>Chapter Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <description>Date/time the application is completed.</description>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommitteeReviewDate__c</fullName>
        <description>Date the Committee reviews the students application including all documentation and notes from phone interview.</description>
        <label>Committee Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommitteeReviewNotes__c</fullName>
        <description>After Committee meets and reviews students application, notes are then added indicating their decision and additional information.</description>
        <label>Committee Review Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <description>Date the Financial Application is marked as Complete.</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CumulativeCUsandSAP__c</fullName>
        <description>Banner Cumulative CUs and SAP from Contact</description>
        <formula>Student__r.TotalCUsandSAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative CU&apos;s and SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CumulativeSAP__c</fullName>
        <description>Banner Cumulative SAP from the Contact object</description>
        <formula>Student__r.CumulativeSAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative SAP %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentTermCompletedCUs__c</fullName>
        <formula>Student__r.CurrentTermCompletedCUs__c</formula>
        <label>Current Term Completed CU&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentTermEnrolledCUs__c</fullName>
        <formula>Student__r.CurrentTermEnrolledCUs__c</formula>
        <label>Current Term Enrolled CU&apos;s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentTerm__c</fullName>
        <description>Current Term for Student</description>
        <formula>Student__r.CurrentTerm__c</formula>
        <inlineHelpText>Current Term for Student</inlineHelpText>
        <label>Current Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateEnteredStage1__c</fullName>
        <description>The Date the Financial Application entered Stage 1</description>
        <inlineHelpText>The Date the Financial Application entered Stage 1</inlineHelpText>
        <label>Date Entered Stage 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateEnteredStage2__c</fullName>
        <description>The Date the Financial Application entered Stage 2</description>
        <inlineHelpText>The Date the Financial Application entered Stage 2</inlineHelpText>
        <label>Date Entered Stage 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateEnteredStage3__c</fullName>
        <description>The Date the Financial Application entered Stage 3</description>
        <inlineHelpText>The Date the Financial Application entered Stage 3</inlineHelpText>
        <label>Date Entered Stage 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateOfInterview__c</fullName>
        <description>Date of phone interview between applicant and processor.</description>
        <label>Date Of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeclinedAid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student has declined Aid</description>
        <inlineHelpText>Whether or not the student has declined Aid</inlineHelpText>
        <label>Declined Aid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountApplicantDegreeProgram__c</fullName>
        <description>The degree program as indicated on the discount form.</description>
        <label>Discount Applicant Degree Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountApplicantID__c</fullName>
        <description>The Student ID as indicated on the discount form.</description>
        <label>Discount Applicant ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountApplicantName__c</fullName>
        <description>The name of the student as indicated on the discount form.</description>
        <label>Discount Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountApplicantSignature__c</fullName>
        <description>Employee confirmation as indicated on the discount form.</description>
        <label>Discount Applicant Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountApplicantTermStartDate__c</fullName>
        <description>The anticipated term start date as indicated on the discount form.</description>
        <label>Discount Applicant Term Start Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>Picklist of values used to determine what type of discount should be applied.</description>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full time employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part time employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family member of full time employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DurationinStage1__c</fullName>
        <description>Duration of time in Stage 1</description>
        <formula>IF(  NOT( ISNULL(DateEnteredStage1__c)), 
  (IF( NOT( ISNULL(DateEnteredStage2__c)),
    (DateEnteredStage2__c -  DateEnteredStage1__c) * 1440,
    (IF( NOT( ISNULL(DateEnteredStage3__c)),
      (DateEnteredStage3__c -  DateEnteredStage1__c)  * 1440,
      (IF( NOT( ISNULL(DateEnteredStage4__c)),
        (DateEnteredStage4__c -  DateEnteredStage1__c) * 1440,
        (IF( NOT( ISNULL(DateEnteredStage5__c)),
          (DateEnteredStage5__c -  DateEnteredStage1__c) * 1440,
          (IF( NOT( ISNULL(DateEnteredStage6__c)),
            (DateEnteredStage6__c -  DateEnteredStage1__c) * 1440,
            (IF( NOT( ISNULL(DateEnteredStage7__c)),
              (DateEnteredStage7__c -  DateEnteredStage1__c) * 1440,
              (IF( NOT( ISNULL(DateEnteredStage8__c)),
                (DateEnteredStage8__c -  DateEnteredStage1__c) * 1440,
                (IF( NOT( ISNULL(DateEnteredStage9__c)),
                  (DateEnteredStage9__c -  DateEnteredStage1__c) * 1440,
                  (NOW() - DateEnteredStage1__c) * 1440)))))))))))))))), null)</formula>
        <inlineHelpText>Duration of time in Stage 1</inlineHelpText>
        <label>Duration in Stage 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationinStage2__c</fullName>
        <description>Minutes in Stage 2</description>
        <formula>IF(  NOT( ISNULL(DateEnteredStage2__c)), 
  (IF( NOT( ISNULL(DateEnteredStage3__c)),
    (DateEnteredStage3__c -  DateEnteredStage2__c) * 1440,
    (IF( NOT( ISNULL(DateEnteredStage4__c)),
      (DateEnteredStage4__c -  DateEnteredStage2__c)  * 1440,
      (IF( NOT( ISNULL(DateEnteredStage5__c)),
        (DateEnteredStage5__c -  DateEnteredStage2__c) * 1440,
        (IF( NOT( ISNULL(DateEnteredStage6__c)),
          (DateEnteredStage6__c -  DateEnteredStage2__c) * 1440,
          (IF( NOT( ISNULL(DateEnteredStage7__c)),
            (DateEnteredStage7__c -  DateEnteredStage2__c) * 1440,
            (IF( NOT( ISNULL(DateEnteredStage8__c)),
              (DateEnteredStage8__c -  DateEnteredStage2__c) * 1440,
              (IF( NOT( ISNULL(DateEnteredStage9__c)),
                (DateEnteredStage9__c -  DateEnteredStage2__c) * 1440,
                (NOW() - DateEnteredStage1__c) * 1440)))))))))))))), null)</formula>
        <inlineHelpText>Minutes in Stage 2</inlineHelpText>
        <label>Duration in Stage 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationinStage3__c</fullName>
        <description>Minutes in Stage 3</description>
        <formula>IF(  NOT( ISNULL(DateEnteredStage3__c)), 
  (IF( NOT( ISNULL(DateEnteredStage4__c)),
    (DateEnteredStage4__c -  DateEnteredStage3__c) * 1440,
    (IF( NOT( ISNULL(DateEnteredStage5__c)),
      (DateEnteredStage5__c -  DateEnteredStage3__c)  * 1440,
      (IF( NOT( ISNULL(DateEnteredStage6__c)),
        (DateEnteredStage6__c -  DateEnteredStage3__c) * 1440,
        (IF( NOT( ISNULL(DateEnteredStage7__c)),
          (DateEnteredStage7__c -  DateEnteredStage3__c) * 1440,
          (IF( NOT( ISNULL(DateEnteredStage8__c)),
            (DateEnteredStage8__c -  DateEnteredStage3__c) * 1440,
            (IF( NOT( ISNULL(DateEnteredStage9__c)),
              (DateEnteredStage9__c -  DateEnteredStage3__c) * 1440,
              (NOW() - DateEnteredStage3__c) * 1440)))))))))))), null)</formula>
        <inlineHelpText>Minutes in Stage 3</inlineHelpText>
        <label>Duration in Stage 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>The date at which the applicattion is done with funding</description>
        <inlineHelpText>The date at which the applicattion is done with funding</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollmentCounselor__c</fullName>
        <formula>Opportunity__r.Owner.FirstName&amp;&quot; &quot;&amp;Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentEstimatedStart__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Estimated Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollmentFinanceStatus__c</fullName>
        <formula>Opportunity__r.BursarStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Finance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <label>Entitlement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAAidYearStartDate__c</fullName>
        <description>Financial Aid Aid Year start date</description>
        <formula>FAAidYear__r.BeginDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Financial Aid Aid Year start date</inlineHelpText>
        <label>FA Aid Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAAidYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aid year for financial Aid</description>
        <label>FA Aid Year</label>
        <referenceTo>Year__c</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>FinancialApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FamilyRelation__c</fullName>
        <description>Open text field to indicate how the student applying for a discount is related to the WGU employee.</description>
        <label>Family Relation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldExperienceStatus__c</fullName>
        <formula>Text( FieldExperience__r.AdmissionStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Experience Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldExperience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Experience</label>
        <referenceTo>FieldExperience__c</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>FinancialApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialAwardAmount__c</fullName>
        <description>Roll-up of Total Amount from the Financial Award object through trigger.</description>
        <label>Financial Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FundDenialReason__c</fullName>
        <description>Reason for denial of financial fund if not approved after committee review.</description>
        <label>Fund Denial Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Not Enrolling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Board Denial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Not Enrolling/No Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded up to Cost of Attendance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GPANotes__c</fullName>
        <description>Notes regarding the GPA from a student&apos;s transcripts</description>
        <label>GPA Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrantRenewTerm__c</fullName>
        <description>The term that grants such as Pell or State grants will renew</description>
        <inlineHelpText>The term that grants such as Pell or State grants will renew</inlineHelpText>
        <label>Grant Renew Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student&apos;s grants(Pell, State etc) have been run through auto packaging</description>
        <inlineHelpText>Whether or not the student&apos;s grants(Pell, State etc) have been run through auto packaging</inlineHelpText>
        <label>Grants Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasFAFSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student has a FAFSA this aid year</description>
        <inlineHelpText>Whether or not the student has a FAFSA this aid year</inlineHelpText>
        <label>Has FAFSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasHold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student has a hold on their account</description>
        <inlineHelpText>Whether or not the student has a hold on their account</inlineHelpText>
        <label>Has Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InterviewNotes__c</fullName>
        <description>Notes taken by the processor during the phone interview with the applicant.</description>
        <label>Interview Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InterviewerComments__c</fullName>
        <label>Interviewer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsApplicantQualified__c</fullName>
        <description>After the Processor reviews the students application they use this field to indicate qualification status of &quot;No, Not Qualified&quot; or &quot;Yes, Qualified&quot;.</description>
        <label>Is Applicant Qualified?</label>
        <picklist>
            <picklistValues>
                <fullName>Undecided</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No, Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Qualified (Current Student)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Qualified (New Student)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes Has Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Pay Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Qualified (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUPLICATE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastAAVDate__c</fullName>
        <description>Last date student set AAV</description>
        <formula>Student__r.LastDateOfAAV__c</formula>
        <inlineHelpText>Last date student set AAV</inlineHelpText>
        <label>Last AAV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCAREStatusDate__c</fullName>
        <description>Last Date CARE Status Changed</description>
        <formula>Opportunity__r.LastStatusDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last Date CARE Status Changed</inlineHelpText>
        <label>Last CARE Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCertifiedDate__c</fullName>
        <description>Last Date of Military Benefit Certification</description>
        <inlineHelpText>Last Date of Military Benefit Certification</inlineHelpText>
        <label>Last Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastContact__c</fullName>
        <description>Last time an activity occurred on the account</description>
        <label>Last Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastSAPStanding__c</fullName>
        <description>The last recorded sap standing</description>
        <inlineHelpText>The Last Recorded SAP Standing. (X = First Term)</inlineHelpText>
        <label>Last SAP Standing</label>
        <picklist>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LoanRenewTerm__c</fullName>
        <description>The Term a student&apos;s loans are set to renew</description>
        <inlineHelpText>The Term a student&apos;s loans are set to renew</inlineHelpText>
        <label>Loan Renew Term</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoansProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the student has been run through auto packaging for loans</description>
        <inlineHelpText>Whether or not the student has been run through auto packaging for loans.  Student may not have loans because they are pending processing or were not eligible/declined.</inlineHelpText>
        <label>Loans Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MethodsOfPayment__c</fullName>
        <description>Method(s) of payment as indicated on the discount form.</description>
        <label>Method(s) of Payment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MilitaryScholarshipPriority__c</fullName>
        <description>This is a formula field that pulls the information from Opportunity__r.MilitaryScholarshipPriority__c. It was created by Rhett Bolton for the use of the Scholarship Department upon request from Ashley Wankier.</description>
        <formula>IF(Opportunity__r.MilitaryScholarshipPriority__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Military/Scholarship Priority from the CARE Profile.</inlineHelpText>
        <label>Military/Scholarship Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSLDSCheckNeeded__c</fullName>
        <description>Indicates that the Student needs NSLDS to be reviewed</description>
        <inlineHelpText>Indicates that the Student needs NSLDS to be reviewed</inlineHelpText>
        <label>NSLDS Check Needed</label>
        <summaryFilterItems>
            <field>FinancialRequirement__c.RequirementDescription__c</field>
            <operation>startsWith</operation>
            <value>NSLDS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FinancialRequirement__c.RequirementsStatus__c</field>
            <operation>notEqual</operation>
            <value>Received and Satisfied, Satisfied</value>
        </summaryFilterItems>
        <summaryForeignKey>FinancialRequirement__c.FinancialApplication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>